tests/invalid/goto/i15_goto_undef.f
program badgoto
  integer i
  i = 1
  goto 999
  print *, i
end
